[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/inputLayer.gd" type="Script" id=1]

[node name="inputLayer" type="Control"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.878431, 0.941176, 0.898039, 1 )
margin_right = 200.0
margin_bottom = 300.0
color = Color( 0.678431, 0.678431, 0.678431, 1 )

[node name="LineEdit1" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = 21.0
margin_right = 190.0
margin_bottom = 51.0
text = "Haptic"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = 72.0
margin_right = 190.0
margin_bottom = 102.0
text = "btn_1"

[node name="btn_submit" type="Button" parent="."]
margin_left = 61.0
margin_top = 244.0
margin_right = 128.0
margin_bottom = 273.0
text = "submit"

[node name="Label" type="Label" parent="."]
margin_left = 29.0
margin_top = 32.0
margin_right = 83.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "category"

[node name="Label2" type="Label" parent="."]
margin_left = 31.0
margin_top = 82.0
margin_right = 71.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "control"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label3" type="Label" parent="."]
margin_left = 31.0
margin_top = 132.0
margin_right = 71.0
margin_bottom = 146.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "type"

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 109.0
margin_top = 121.0
margin_right = 189.0
margin_bottom = 151.0
text = "wind"

[node name="LineEdit4" type="LineEdit" parent="."]
margin_left = 109.0
margin_top = 175.0
margin_right = 189.0
margin_bottom = 205.0
text = "1"

[node name="Label4" type="Label" parent="."]
margin_left = 31.0
margin_top = 185.0
margin_right = 71.0
margin_bottom = 199.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "level"
